# gx2-py

./: .gitignore  GettingStarted.ipynb  README.md  functions.py  pyproject.toml  test_gx2inv.py
.github/workflows/: publish.yml  test.yml
gx2/: __init__.py  _basic.py  _convert.py  _distribution.py  _helpers.py  _methods.py  _ray.py
tests/: test_gx2.py
